--- a/ReactHooks/KhataBook/package.json
+++ b/ReactHooks/KhataBook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-react",
+  "name": "khatabook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styled-components": "^6.1.18"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
