--- a/ReactHooks/LearningHooks/package.json
+++ b/ReactHooks/LearningHooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-react",
+  "name": "learninghooks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styled-components": "^6.1.18"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
