--- a/API/.env
+++ b/API/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DBURL="mongodb+srv://react:react@cluster0.x4ssoj0.mongodb.net/reactapi?retryWrites=true&w=majority&appName=Cluster0"
+SKEY="dffdggffgfdg5454dffgdgdfgd454dfsgfg545"
