--- a/API/.env
+++ b/API/.env
@@ -5,3 +5,4 @@ IMGURL="https://two2apr-2025-react.onrender.com"
 APIKEY="626924471988333"
 APISECRET="kFDpdqqT-MX1PwOyVoLV8aDulbE"
 CNAME="dou92qsbl"
+FSKEY="fdfdfdsdsfdsfasdgfrtredgf"
